[tool.poetry]
name = "sparrow-ui"
version = "0.1.0"
description = "Sparrow UI"
authors = ["Andrej Baranovskij <andrejus.baranovskis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
