[tool.poetry]
name = "sparrow-parse"
version = "0.2.9"
description = "Sparrow Parse is a Python package for parsing and extracting information from documents."
authors = ["Andrej Baranovskij <andrejus.baranovskis@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/katanaml/sparrow/tree/main/sparrow-data/parse"
repository = "https://github.com/katanaml/sparrow"
keywords = ["llm", "rag", "vision"]
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.10",
]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = {version = "2.2.2", source = "pypi"}
unstructured = {version = "0.14.5", extras = ["all-docs"]}
unstructured-inference = "0.7.33"
rich = "^13.7.1"
pymupdf4llm = "0.0.5"
transformers = "4.41.2"
sentence-transformers = "3.0.1"
numpy = "1.26.4"


[tool.poetry.scripts]
sparrow-parse = 'sparrow_parse:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"